--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <main id="main">
     <div class="container">
       <h4>Welcome</h4>
-      <h2 class="active">I`M A <span></span></h2>
+      <h2 class="active">I`M A <span>SpringFramwork Developer</span></h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolor quas nulla unde ea officiis?</p>
       <button class="download">DOWNLOAD CV</button>
       <button class="mouse"><i class="fa-solid fa-computer-mouse"></i></button>
